# nasa-breakup-model-cpp

./: CMakeLists.txt  README.md  config.yaml  config_iridium_cosmos.yaml  config_iridium_cosmos2.yaml  config_nimbus6.yaml  data.yaml  data_iridium_cosmos2.yaml  data_nimbus6.yaml
.github/workflows/: blank.yml  ctest.yml
cmake/: gtest.cmake  spdlog.cmake  thrust.cmake  yaml.cmake
cmake/modules/: gtest.cmake
example-config/: config_iridium.yaml  config_iridium_cosmos2.yaml  config_nimbus6.yaml  data_explosion.yaml
script/: .gitignore  breakupCompareScript.py  breakupScript.py  statisticalTest.py  timeMeasurements.py
src/: main.cpp
src/breakupModel/input/: CSVReader.h  InputConfigurationSource.h  RuntimeInputSource.cpp  RuntimeInputSource.h  TLEReader.cpp  TLEReader.h  YAMLConfigurationReader.cpp  YAMLConfigurationReader.h
src/breakupModel/model/: OrbitalElements.cpp  OrbitalElements.h  OrbitalElementsFactory.h  Satellite.h  SatelliteBuilder.cpp  SatelliteBuilder.h  Satellites.cpp  Satellites.h
src/breakupModel/output/: CSVPatternWriter.cpp  CSVPatternWriter.h  VTKWriter.cpp  VTKWriter.h
src/breakupModel/simulation/: Breakup.cpp  Breakup.h  BreakupBuilder.h  Collision.cpp  Collision.h  Explosion.cpp  Explosion.h
src/breakupModel/util/: UtilityAreaMassRatio.h  UtilityContainer.h  UtilityFunctions.h  UtilityKepler.h
src/input/: CSVReader.cpp  CSVReader.h  ConfigurationReader.h  ConfigurationSource.h  DataReader.h  DataSource.h  InputConfigurationSource.h  InputReader.h  OutputConfigurationSource.h  RuntimeInputSource.cpp  RuntimeInputSource.h  TLEReader.cpp  TLEReader.h  TLESatcatDataReader.cpp  TLESatcatDataReader.h  YAMLConfigurationReader.cpp  YAMLConfigurationReader.h  YAMLDataReader.cpp  YAMLDataReader.h  YAMLReader.cpp  YAMLReader.h
src/model/: OrbitalElements.cpp  OrbitalElements.h  OrbitalElementsFactory.cpp  OrbitalElementsFactory.h  Satellite.cpp  Satellite.h  SatelliteBuilder.cpp  SatelliteBuilder.h  SatelliteCollection.cpp  SatelliteCollection.h
src/output/: CSVPatternWriter.cpp  CSVPatternWriter.h  CSVWriter.cpp  CSVWriter.h  FancyCSVWriter.cpp  FancyCSVWriter.h  OutputWriter.h  VTKWriter.cpp  VTKWriter.h
src/simulation/: Breakup.cpp  Breakup.h  BreakupBuilder.cpp  BreakupBuilder.h  BreakupFactory.cpp  BreakupFactory.h  Collision.cpp  Collision.h  Explosion.cpp  Explosion.h  Simulation.h  SimulationBuilder.cpp  SimulationBuilder.h
src/util/: UtilityAreaMassRatio.h  UtilityContainer.h  UtilityFunctions.h  UtilityKepler.h  function.h
test/: CMakeLists.txt  test.cpp
test/input/: CSVReaderTest.cpp  TLEReaderTest.cpp  TLESatcatDataReader.cpp  TLESatcatDataReaderTest.cpp  YAMLConfigurationReaderTest.cpp  YAMLDataReaderTest.cpp  YAMLReaderTest.cpp
test/model/: OrbitalElementsTest.cpp  SatelliteBuilderTest.cpp  SatelliteCollectionTest.cpp  SatelliteTest.cpp
test/output/: CSVPatternWriterTest.cpp  CSVWriterTest.cpp  VTKWriterTest.cpp
test/resources/: VTKWriterTest.vtu  YamlConfigurationReaderTest01.yaml  getSatelliteCollectionTest.yaml
test/simulation/: BreakupBuilderTest.cpp  BreakupTest.cpp  CollisionTest.cpp  ExplosionTest.cpp
test/util/: UtilityFunctionsTest.cpp  UtilityKeplerTest.cpp
